[package]
name = "ninja_rpg_simulator"
version = "0.1.0"
authors = ["juzy <dochy.ksti@gmail.com>"]
edition = "2021"

license = "MIT OR Apache-2.0"
description = "A kind of ninja TRPG simulator(which means it's a computer RPG)"
repository = "https://github.com/dochy-ksti/ninja_trpg_simulator"
readme = "readme.md"
keywords = ["game-mechanics"]
categories = ["Games"]
documentation = "https://docs.rs/ninja_rpg_simulator"


[workspace]
members=[
    "ninja_lang",
    "ninja_core",
    "ninja_ai",
    "ninja_src",
    "ninja_gui",
    "ninja_gui_test"
]

[dependencies]
docchi_json5 = "0.8"
# docchi = "0.8"
anyhow = "1.0"

